fix: fix path icon and adjust header alignment

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,7 +2,6 @@
 $breakpoint-tablet: 768px;
 
 header {
-  @include flex-align-justify(center, space-between);
   width: 100%;
   margin: 0;
   padding: 0 2rem;
@@ -14,9 +13,13 @@ header {
   &.dark {
     background-color: $darkGray;
   }
+
   a img {
-    width: 7.8rem;
+    width: 7rem;
+    margin-top: 1rem;
+    padding: 0;
     animation: fromLeft 1s forwards 0.4s;
+    @include flex-align-justify(center, center);
   }
   ul {
     @include alignment(center);
@@ -45,8 +48,9 @@ header {
     }
   }
   .theme-toggle {
-    width: 4rem;
-    height: 4rem;
+    width: 7rem;
+    height: 7rem;
+    padding-top: 0.2rem;
     border-radius: 99rem;
     &:hover {
       background-color: #efc356;
@@ -60,7 +64,8 @@ header {
     cursor: pointer;
 
     .hamburger-icon {
-      width: 4rem;
+      width: 8rem;
+      padding: 0 2rem;
       transition: all 0.3s ease;
 
       &::before,
