--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -20,7 +20,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "Readex Pro", "Lato", "Playfair Display";
+  font-family: "Lato", "Playfair Display";
   width: 100vw;
   height: 100vh;
   font-size: 62.5%;
